--- a/app/about.html
+++ b/app/about.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>Home Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles2.css">
+
 </head>
 
 <body>
