--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
         Season with salt and pepper to taste and serve immediately. Leftovers can be reheated in a saucepan 
         with some oil and the salad will keep in the fridge for a few days.
       </p>
+      <p>Something I like is honey, because it comes fom bees and is delicious.</p>
       <nav>
         <a href="about.html">About</a>
       </nav>
