added p tag to index

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
         with some oil and the salad will keep in the fridge for a few days.
       </p>
       <p>Something I like is honey, because it comes fom bees and is delicious.</p>
+      <p>Something I like is avocados because they are tasty and good for you!</p>
       <nav>
         <a href="about.html">About</a>
       </nav>
