--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
       <p>Something I like is avocados because they are tasty and good for you!</p>
       <nav>
         <a href="about.html">About</a>
+        <a href="extra.html">About</a>
       </nav>
     </header>
   </body>
